2008-10-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{xfsm-client.c,xfsm-properties.*}: Move some
	  properties manipulation functions from xfsm-client.c to
	  xfsm-properties.c

2008-10-06	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Make D-Bus a hard dependency.
	* xfce4-session/Makefile.am: Add xfsm-error.* and D-Bus stuff to the
	  build.
	* xfce4-session/{xfsm-manager-dbus.xml,xfsm-client-dbus.xml}: Add
	  D-Bus interface introspection files.
	* xfce4-session/shutdown.*: Make the shutdown type a real enum,
	  and add values for 'ask', 'suspend', and 'hibernate'.
	* xfce4-session/xfsm-shutdown-helper.*: Make sure the shutdown
	  types/commands don't clash with shutdown.h.
	* xfce4-session/xfsm-global.*: Add some GValue convenience
	  functions.
	* xfce4-session/xfsm-error.*: Add XfsmError type, and register the
	  error domain with D-Bus.
	* xfce4-session/{xfsm-manager.*,xfsm-client.*}: Implement D-Bus
	  server for org.xfce.Session.Manager and org.xfce.Session.Client.
	* xfce4-session/main.c: Hook up some D-Bus stuff.
	* po/POTFILES.in: Add xfsm-manager.c and xfsm-client.c to POTFILES.

2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Add signals to XfsmManager.

2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{sm-layer.c,xfsm-client.*,xfsm-properties.*}:
	  Add signals to XfsmClient, and move some of the property
	  handling code into XfsmClient to make signal emission
	  easier.
	* xfce4-session/{xfsm-marshal.list,Makefile.am}: Add signal
	  marshallers.

2008-10-04	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{sm-layer.c,xfsm-client.[ch],xfsm-manager.c}:
	  Turn XfsmClient into a GObject.  Second step for bug 798 and
	  a D-Bus interface.

2008-10-03	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/{main.c,xfsm-manager.{c,h},xfsm-global.{c,h}}:
	  Move some functions that aren't really XfsmManager-related
	  into xfsm-global.
